Add: test new HTML

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    {% seo %}
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#157878">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    
+    {% include head-custom.html %}
+
 </head>
 <body>
-    <nav>
-        <a href="{{ '/' | relative_url }}">About</a> | 
-        <a href="{{ '/projects' | relative_url }}">Projects</a> | 
-        <a href="{{ '/contact' | relative_url }}">Contact</a>
-    </nav>
+
+    <header class="page-header" role="banner">
+
+        <a href="{{ '/' | relative_url }}" class="btn">About</a>
+        <a href="{{ '/projects' | relative_url }}" class="btn">Projects</a>
+        <a href="{{ '/contact' | relative_url }}" class="btn">Contact</a>
+
+        <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+        <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+
+        <nav>
+            <a href="{{ '/' | relative_url }}">About</a> | 
+            <a href="{{ '/projects' | relative_url }}">Projects</a> | 
+            <a href="{{ '/contact' | relative_url }}">Contact</a>
+        </nav>
+    </header>
 
     <main>
         {{ content }}
