Update: "About Me" to "About"

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
     <header class="page-header" role="banner">
 
-        <a href="{{ '/' | relative_url }}" class="btn">About Me</a>
+        <a href="{{ '/' | relative_url }}" class="btn">About</a>
         <a href="{{ '/projects' | relative_url }}" class="btn">Projects</a>
         <a href="{{ '/contact' | relative_url }}" class="btn">Contact</a>
 
